# battery-notifier

./: .gitignore  BatteryNotifier.csproj  BatteryNotifier.sln  Program.cs  README.md  build.ps1  build.sh
notifier-rs/: Cargo.toml
notifier-rs/src/: lib.rs
notifier-rs/tests/: bindings.rs
